--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,12 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FF0000</color>
+    <color name="yellow">#FFDD00</color>
+    <color name="gray">#4A4A4A</color>
+    <color name="transpa">#00000000</color>
+    <color name="icon_gray">#555555</color>
+    <color name="accent_red">#EC2D2D</color>
+    <color name="pink">#C29B9B</color>
+    <color name="marrom">#4F3A3A</color>
 </resources>
