--- a/app/src/main/res/layout/aa_tela_login.xml
+++ b/app/src/main/res/layout/aa_tela_login.xml
@@ -3,17 +3,88 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:background="@color/red"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AALogicaLogin">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center|top"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/quickdeal_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/quickdeal"
+            tools:ignore="ContentDescription,ImageContrastCheck" />
+
+        <TextView
+            android:id="@+id/txt_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Faça seu login:"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            tools:ignore="HardcodedText,SpUsage,TextSizeCheck" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/txt_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Email"
+                android:textColor="@color/white"
+                tools:ignore="HardcodedText,TextContrastCheck" />
+
+            <EditText
+                android:id="@+id/edt_email"
+                android:layout_width="224dp"
+                android:layout_height="45dp"
+                android:background="@drawable/campo_redondo"
+                android:ems="10"
+                android:inputType="textEmailAddress"
+                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TextContrastCheck,TouchTargetSizeCheck" />
+
+            <TextView
+                android:id="@+id/txt_senha"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Senha"
+                android:textColor="@color/white"
+                tools:ignore="HardcodedText,TextContrastCheck" />
+
+            <EditText
+                android:id="@+id/edt_senha"
+                android:layout_width="224dp"
+                android:layout_height="45dp"
+                android:background="@drawable/campo_redondo"
+                android:ems="10"
+                android:inputType="textPassword"
+                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_continuar"
+            android:layout_width="226dp"
+            android:layout_height="49dp"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/botao_redondo"
+            android:text="@string/btn_continuar"
+            android:textColor="@color/black" />
+
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
