--- a/app/src/main/res/drawable/barravermelha.xml
+++ b/app/src/main/res/drawable/barravermelha.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/red" /> <!-- Vermelho forte -->
+    <solid android:color="@color/cor_vermelho" /> <!-- Vermelho forte -->
 
     <corners
         android:bottomLeftRadius="14dp"
