--- a/app/src/main/res/layout/aa_tela_login.xml
+++ b/app/src/main/res/layout/aa_tela_login.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="@color/red"
+    android:background="@color/cor_vermelho"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AALogicaLogin">
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="Faça seu login:"
-            android:textColor="@color/white"
+            android:textColor="@color/cor_branco"
             android:textSize="20dp"
             tools:ignore="HardcodedText,SpUsage,TextSizeCheck" />
 
@@ -43,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:text="Email"
-                android:textColor="@color/white"
+                android:textColor="@color/cor_branco"
                 tools:ignore="HardcodedText,TextContrastCheck" />
 
             <EditText
@@ -61,7 +61,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:text="Senha"
-                android:textColor="@color/white"
+                android:textColor="@color/cor_branco"
                 tools:ignore="HardcodedText,TextContrastCheck" />
 
             <EditText
@@ -80,20 +80,25 @@
             android:layout_height="49dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/botao_redondo"
-            android:text="@string/btn_continuar"
-            android:textColor="@color/black" />
+            android:text="@string/texto_botao_continuar"
+            android:textColor="@color/cor_preto" />
 
         <Button
             android:id="@+id/button"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="@string/btn_naocadastro" />
+            android:layout_marginTop="20dp"
+            android:background="@color/cor_transparente"
+            android:text="@string/texto_botao_naocadastro"
+            tools:ignore="TextSizeCheck,TextContrastCheck" />
 
         <Button
             android:id="@+id/button2"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="@string/btn_esquecisenha" />
+            android:background="@color/cor_transparente"
+            android:text="@string/texto_botao_esquecisenha"
+            tools:ignore="TextContrastCheck" />
 
 
     </LinearLayout>
