--- a/app/src/main/res/layout/ad_tela_senha_b.xml
+++ b/app/src/main/res/layout/ad_tela_senha_b.xml
@@ -5,6 +5,115 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ADLogicaSenhaB">
+    tools:context=".ADLogicaSenhaB"
+    android:background="@color/cor_vermelho">
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="176dp"
+        android:layout_height="88dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/table_esqueciSenha"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/quickdeal"
+        tools:ignore="ContentDescription,ImageContrastCheck" />
+
+    <LinearLayout
+        android:id="@+id/table_esqueciSenha"
+        android:layout_width="326dp"
+        android:layout_height="313dp"
+        android:background="@drawable/tabela_arredondada"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.38">
+
+
+        <TextView
+            android:id="@+id/texto_esqueciSenha"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
+            android:text="Esqueci minha senha"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="@color/cor_preto"
+            android:textSize="22dp"
+            android:textStyle="bold"
+            android:typeface="normal"
+            tools:ignore="HardcodedText,SpUsage,TextSizeCheck" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="10dp"
+            android:text="Informe a nova Senha numérica:"
+            android:textColor="@color/cor_preto" />
+
+        <EditText
+            android:id="@+id/editTextNumberPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:ems="10"
+            android:inputType="numberPassword"
+            android:minHeight="48dp"
+            tools:ignore="SpeakableTextPresentCheck"
+            android:textColor="@color/cor_preto"/>
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:text="Confirme a nova senha numérica:"
+            android:textColor="@color/cor_preto" />
+
+        <EditText
+            android:id="@+id/editTextNumberPassword2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:ems="10"
+            android:inputType="numberPassword"
+            android:minHeight="48dp"
+            tools:ignore="SpeakableTextPresentCheck"
+            android:textColor="@color/cor_preto"/>
+
+        <Button
+            android:id="@+id/btn_confirm"
+            android:layout_width="200dp"
+            android:layout_height="35dp"
+            android:background="@drawable/botao_amarelo"
+            android:fontFamily="sans-serif-black"
+            android:text="Continuar"
+            android:textAlignment="center"
+            android:textColor="@color/cor_preto"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText,TouchTargetSizeCheck" />
+
+        <Button
+            android:id="@+id/btn_cancelar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/cor_transparente"
+            android:text="Cancelar"
+            android:textColor="@color/cor_cinza"
+            android:textSize="12dp"
+            tools:ignore="HardcodedText,SpUsage,TextSizeCheck,VisualLintButtonSize" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
