--- a/app/src/main/res/layout/bc_tela_restaurantes.xml
+++ b/app/src/main/res/layout/bc_tela_restaurantes.xml
@@ -117,7 +117,7 @@
         <ImageView
             android:id="@+id/imageView4"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:layout_gravity="center|top"
             android:layout_marginTop="30dp"
             android:contentDescription="@string/textoimagemquickdeal"
